# RAY-TRACING

./: CMakeLists.txt  results.txt
.devcontainer/: Dockerfile
scenes/: empty.json
src/raymath/: AABB.cpp  Ray.cpp  Ray.hpp
src/rayscene/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
tests/: CMakeLists.txt  TestImage.cpp  TestSphere.cpp
